@@ -1,5 +1,6 @@
 3.1.4
 	Add support for switching to a given group (Ralf S. Engelschall)
+	Add substitutions for sendmail macro and strftime in URL checks
 3.1.3
 	Fix various bugs (regex searches, lists matches, uninitialized memory)
 3.1.2
